# covid-19

./: .gitignore  Makefile  coronadb.ipynb  datapackage.json  pyproject.toml  time-series-19-covid-combined-enhanced.csv  time-series-19-covid-combined-enhanced_2020-03-17.csv
covidb/: config.py  process.py  pull.py
data/: geocodes.csv  state_geocodes.csv
